hydroflow/tests/compile-fail/surface_flow_props_upcast.stderr
error: Cannot ilegally up-cast from `None` to `Some(Delta)`.
 --> tests/compile-fail/surface_flow_props_upcast.rs:9:16
  |
9 |             -> cast(Some(Delta))
  |                ^^^^^^^^^^^^^^^^^

warning: unused imports: `SetUnionSingletonSet` and `SetUnion`
 --> tests/compile-fail/surface_flow_props_upcast.rs:1:38
  |
1 | use hydroflow::lattices::set_union::{SetUnionSingletonSet, SetUnion};
  |                                      ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `hydroflow::lattices::collections::SingletonSet`
 --> tests/compile-fail/surface_flow_props_upcast.rs:2:5
  |
2 | use hydroflow::lattices::collections::SingletonSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
